--- a/user.service
+++ b/user.service
@@ -4,7 +4,7 @@ Description = User Service
 User=roboshop
 Environment=MONGO=true
 // highlight-start
-Environment=REDIS_URL='redis://redis.daws44ss.site:6379'
+Environment=REDIS_URL="redis://redis.daws44ss.site:6379"
 Environment=MONGO_URL="mongodb://mongodb.daws84ss.site:27017/users"
 // highlight-end
 ExecStart=/bin/node /app/server.js
